--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -4,7 +4,7 @@
       <h3>Concentrador Secundario de UDESA</h3>
     </div>
     <div class="col-md-offset-4 col-md-4 col-md-offset-4 vert-offset-bottom-7">
-      <form name="loginForm">
+      <form name="loginForm" ng-submit="login(user)">
         <div class="form-group">
           <label for="username">Nombre de usuario</label>
           <input type="text" class="form-control" id="username" name="username" placeholder="Nombre de usuario" ng-model="user.username" required>
@@ -15,8 +15,7 @@
           <input type="password" class="form-control" id="password" name="password" placeholder="Contraseña" ng-model="user.password" required>
           <div class="alert alert-danger" ng-show="loginForm.password.$dirty && loginForm.password.$error.required"><label>¡Campo obligatorio!</label></div>
         </div>
-        <button type="submit" class="btn btn-primary btn-lg btn-block" ng-show="!loginForm.$valid" disabled>Acceder</button>
-        <button type="submit" class="btn btn-primary btn-lg btn-block" ng-show="loginForm.$valid" ng-click="login(user)">Acceder</button>
+        <button type="submit" class="btn btn-primary btn-lg btn-block" ng-disabled="!loginForm.$valid">Acceder</button>
       </form>
     </div>
   </div>
