Se han incluido la sección de Auditoría:
- Creado backend en Node para Auditoría:
   * REST endpoint para manipular Auditoría.

- Creado frontend con animaciones en AngularJS para Auditoría:
   * Lista de ficheros de entrada con filtrado.
   * Timeline de estado por fichero de entrada (directiva).
   * Lista de ficheros de salida por fichero de entrada.
   * Posibilidad de forzar la transición a un estado posterior una vez revisados los ficheros BAD2.

- También se han ajustado los frontales de Entrada y Salida para mantener los filtros de las tablas cuando se cambia de distribuidora.

- Se han controlado las excepciones.
- Se ha rediseñado el API.
- Se ha creado un archivo de configuración del API.

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -60,9 +60,14 @@ body {
 }
 
 /* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1400px) {
   .container {
-    max-width: 1200px;
+    width: 1400px;
+  }
+
+  .modal-huge {
+    width: 1200px;
+    margin: 30px auto;
   }
 
   /* Remove the padding we set earlier */
@@ -90,7 +95,12 @@ body {
 .red, .red a{
   background-color: red;
   color: white;
-  
+
+}
+
+.brown, .brown a{
+  background-color: brown;
+  color: white;
 }
 
 .yellow, .yellow a{
@@ -106,12 +116,16 @@ body {
   color: darkgray;
 }
 
+.brown a:hover{
+  color: darkgray;
+}
+
 .yellow a:hover{
   color: dimgray;
 }
 
 .selected{
-  background-color: lightblue;
+  opacity: 0.8;
 }
 
 
