Se añade la posibilidad de que el operador transicione de estado PROCESADO_ERROR y PROCESADO_INCORRECTO_PDTE_INFORME a PROCESADO_COMPLETADO Se añaden colores al timeline de los estados de Auditoría

--- a/client/app/views/directives/custom-timeline-entry.html
+++ b/client/app/views/directives/custom-timeline-entry.html
@@ -4,7 +4,9 @@
   <div class="events-body">
     <p class="events-heading" title="{{data.inputState}}">{{data.inputState}}</p>
     <!--<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> hace 11 horas</small></p>-->
-    <p ng-if="data.stateForcedBy">Estado forzado por {{data.stateForcedBy}}</p>
-    <p>{{data.errorMsg}}</p>
+    <p ng-if="data.errorMsg" class="alert alert-danger">{{data.errorMsg}}</p>
+    <p ng-if="data.stateForcedBy">Forzado por: {{data.stateForcedBy}}</p>
+    <p ng-if="data.comment" class="alert alert-info">{{data.comment}}</p>
+
   </div>
 </div>
