--- a/client/app/views/directives/custom-timeline-entry.html
+++ b/client/app/views/directives/custom-timeline-entry.html
@@ -2,7 +2,8 @@
 <div class="time">{{data.creationDate|date:'dd MMM HH:mm'}}</div>
 <div class="events">
   <div class="events-body">
-    <p class="events-heading" title="{{data.inputState}}">{{data.inputState}}</p>
+    <p ng-if="data.inputState" class="events-heading" title="{{data.inputState}}">{{data.inputState}}</p>
+    <p ng-if="data.outputState" class="events-heading" title="{{data.outputState}}">{{data.outputState}}</p>
     <!--<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> hace 11 horas</small></p>-->
     <p ng-if="data.errorMsg" class="alert alert-danger">{{data.errorMsg}}</p>
     <p ng-if="data.stateForcedBy">Forzado por: {{data.stateForcedBy}}</p>
