- Se añade el mensaje de la objeción a la vista modal de objeción

--- a/client/app/components/operationResponseObje/view_modal.html
+++ b/client/app/components/operationResponseObje/view_modal.html
@@ -23,6 +23,9 @@
             <div class="col-md-4">{{details.publicado}}</div>
             <div class="col-md-2 text-right">Propuesto:</div>
             <div class="col-md-4">{{details.propuesto}}</div>
+
+            <div class="col-md-2 text-right">Mensaje:</div>
+            <div class="col-md-10">{{details.comentario}}</div>
           </div>
         </div>
         <div class="row">
