--- a/client/app/components/operationResponseObje/view_response_aobjeagcl.html
+++ b/client/app/components/operationResponseObje/view_response_aobjeagcl.html
@@ -9,8 +9,8 @@
         <hr/>
         <div class="row">
           <div class="col-md-12 alert alert-info">
-            <div class="col-md-2 text-right">CUPS:</div>
-            <div class="col-md-4">{{details.cups}}</div>
+            <div class="col-md-2 text-right">Agregación:</div>
+            <div class="col-md-4">{{details.agregacion}}</div>
             <div class="col-md-2 text-right">Motivo:</div>
             <div class="col-md-4">{{details.motivo}}</div>
 
@@ -20,9 +20,9 @@
             <div class="col-md-4">{{details.fechaFin}}</div>
 
             <div class="col-md-2 text-right">Publicado:</div>
-            <div class="col-md-4">{{details.publicado}}</div>
+            <div class="col-md-4">{{details.publicado}}<span ng-if="!details.publicado">---</span></div>
             <div class="col-md-2 text-right">Propuesto:</div>
-            <div class="col-md-4">{{details.propuesto}}</div>
+            <div class="col-md-4">{{details.propuesto}}<span ng-if="!details.propuesto">---</span></div>
 
             <div class="col-md-2 text-right">Mensaje:</div>
             <div class="col-md-10">{{details.comentario}}</div>
@@ -34,13 +34,13 @@
             <div class="input-group">
               <div class="btn-group btn-group-justified">
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default" ng-class="{'btn-primary': responses[details.cups].aceptado === 0}" ng-click="responses[details.cups].aceptado = 0">Aceptada</button>
+                  <button type="button" class="btn btn-default" ng-class="{'btn-primary': responses[details.agregacion].aceptado === 0}" ng-click="responses[details.agregacion].aceptado = 0">Aceptada</button>
                 </div>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default" ng-class="{'btn-primary': responses[details.cups].aceptado === 1}" ng-click="responses[details.cups].aceptado = 1">Rechazada - info incorrecta</button>
+                  <button type="button" class="btn btn-default" ng-class="{'btn-primary': responses[details.agregacion].aceptado === 1}" ng-click="responses[details.agregacion].aceptado = 1">Rechazada - info incorrecta</button>
                 </div>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default" ng-class="{'btn-primary': responses[details.cups].aceptado === 2}" ng-click="responses[details.cups].aceptado = 2">Rechazada - otros</button>
+                  <button type="button" class="btn btn-default" ng-class="{'btn-primary': responses[details.agregacion].aceptado === 2}" ng-click="responses[details.agregacion].aceptado = 2">Rechazada - otros</button>
                 </div>
               </div>
             </div>
@@ -51,7 +51,7 @@
             <label for="second-comer" class="vert-offset-top-1">Segundo Comercializador</label>
             <div class="input-group">
               <span class="input-group-addon" id="second-comer-addon"></span>
-              <input id="second-comer" name="comentario" type="text" maxlength="4" class="form-control" placeholder="Segundo comercializador.." aria-describedby="second-comer-addon" ng-model="responses[details.cups].segundoComer" required />
+              <input id="second-comer" name="comentario" type="text" maxlength="4" class="form-control" placeholder="Segundo comercializador.." aria-describedby="second-comer-addon" ng-model="responses[details.agregacion].segundoComer" required />
             </div>
           </div>
         </div>
@@ -60,7 +60,7 @@
             <label for="comment" class="vert-offset-top-1">Comentario de respuesta</label>
             <div class="input-group">
               <span class="input-group-addon" id="comment-addon"></span>
-              <input id="comment" name="comentario" type="text" class="form-control" placeholder="Comentario.." aria-describedby="comment-addon" ng-model="responses[details.cups].comentarioRespuesta" required />
+              <input id="comment" name="comentario" type="text" class="form-control" placeholder="Comentario.." aria-describedby="comment-addon" ng-model="responses[details.agregacion].comentarioRespuesta" required />
             </div>
           </div>
         </div>
