Se modifica la lógica del componente de respuesta de AOBJEAGCLs para que identifique de una forma mas coherente las objeciones que nos corresponde responder.

--- a/client/app/components/operationResponseObje/view_response_aobjeagcl.html
+++ b/client/app/components/operationResponseObje/view_response_aobjeagcl.html
@@ -67,7 +67,15 @@
       </div>
     </div>
     <div class="modal-footer">
-      <button type="submit" class="btn btn-danger" ng-disabled="responseForm.$invalid || accept === null">Responder</button>
+      <button type="submit" class="btn btn-danger"
+              ng-disabled="responseForm.$invalid || accept === null || objes.length === 0">
+        Responder
+      </button>
+      <button type="button" class="btn btn-warning"
+              ng-click="noManualPendingResponses()"
+              ng-disabled="objes.length > 0">
+        Sin respuestas pendientes
+      </button>
       <button type="button" class="btn btn-primary" ng-click="close()">Cerrar</button>
     </div>
   </form>
